--- a/appLib2.0/build.gradle
+++ b/appLib2.0/build.gradle
@@ -3,7 +3,13 @@ apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.github.dcendents.android-maven'
 //你的Github用户名替换一下
 group='com.github.156036678'
-version = '1.0.2'
+version = '1.0.3'
+//ext {
+//    PUBLISH_GROUP_ID = 'com.xiay'//	开发者名称
+//    PUBLISH_ARTIFACT_ID = 'applib'//项目名称
+//    PUBLISH_VERSION = '1.0'//版本
+//}
+//apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -14,6 +20,13 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//        }
+//    }
 }
 repositories {
     mavenLocal()
