--- a/appLib2.0/build.gradle
+++ b/appLib2.0/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.github.dcendents.android-maven'
 //你的Github用户名替换一下
 group='com.github.156036678'
-version = '1.0.3'
+version = '1.0.0'
 //ext {
 //    PUBLISH_GROUP_ID = 'com.xiay'//	开发者名称
 //    PUBLISH_ARTIFACT_ID = 'applib'//项目名称
@@ -16,7 +15,9 @@ android {
     lintOptions {
         abortOnError false
     }
-
+    dataBinding{
+        enabled = true
+    }
     defaultConfig {
         minSdkVersion 16
     }
@@ -35,33 +36,23 @@ repositories {
         dirs 'libs'
     }
 }
-greendao {
-    schemaVersion 1
-    daoPackage 'gen.greendao'
-    targetGenDir 'src/main/java/'
-}
 
 dependencies {
     //  compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:+'
-    compile files('libs/alipaySdk-20151112.jar')
-    compile files('libs/libammsdk.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.code.gson:gson:2.2.4'
-        compile 'com.android.support:recyclerview-v7:+'
-        compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:appcompat-v7:+'
+     // compile project(':AppJar2.0')
     compile files('libs/AppJar.jar')
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
     compile 'com.yanzhenjie:permission:1.0.2'
-
     //RxAndroid
     compile 'io.reactivex:rxandroid:+'
     compile 'io.reactivex:rxjava:+'
 
-     //GreenDao
-    compile 'org.greenrobot:greendao:+'
-    compile 'org.greenrobot:greendao-generator:+'
-
     compile 'com.tencent.bugly:crashreport:+'
-    compile 'com.android.databinding:library:1.0-rc3'
+    compile files('libs/ormlite-android-5.0.jar')
+    compile files('libs/ormlite-core-5.0.jar')
 }
