--- a/appLib2.0/src/main/AndroidManifest.xml
+++ b/appLib2.0/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".imageselector.crop.CropImageActivity" android:theme="@style/CustomTheme"/>
         <service android:name=".service.AppUpdateService" />
         <service android:name=".service.AppDownPicService" />
+        <service android:name=".service.AppInitializeService" />
 
         <!--广播注册-->
         <receiver android:name=".receiver.AppReceiver">
@@ -69,6 +70,17 @@
         <activity
             android:name=".imageselector.view.ImagePreviewDeleteActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name="com.tencent.bugly.beta.ui.BetaActivity"
+            android:theme="@android:style/Theme.Translucent" />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
-
 </manifest>
